@@ -45,8 +45,9 @@ import java.util.stream.Stream;
 /**
  * DAO for collection references
  */
+@SuppressWarnings({"rawtypes"})
 public abstract class CollectionReferenceService {
-    private static Logger LOGGER = LoggerFactory.getLogger(CollectionReferenceService.class);
+    private static final Logger LOGGER = LoggerFactory.getLogger(CollectionReferenceService.class);
     protected final String arlasIndex;
     protected final CacheManager cacheManager;
 
@@ -57,9 +58,9 @@ public abstract class CollectionReferenceService {
 
     abstract protected CollectionReference getCollectionReferenceFromDao(String ref) throws ArlasException;
 
-    abstract protected Map<String, LinkedHashMap> getMappingFromDao(String indexName) throws ArlasException;
+    abstract protected Map<String, Map<String, Object>> getMappingFromDao(String indexName) throws ArlasException;
 
-    abstract protected Map<String, LinkedHashMap> getAllMappingsFromDao(String arlasIndex) throws ArlasException;
+    abstract protected Map<String, Map<String, Object>> getAllMappingsFromDao(String arlasIndex) throws ArlasException;
 
     abstract protected void putCollectionReferenceWithDao(CollectionReference collectionReference) throws ArlasException;
 
@@ -85,8 +86,8 @@ public abstract class CollectionReferenceService {
         }
     }
 
-    protected Map<String, LinkedHashMap> getMapping(String indexName) throws ArlasException {
-        Map<String, LinkedHashMap> mapping = cacheManager.getMapping(indexName);
+    protected Map<String, Map<String, Object>> getMapping(String indexName) throws ArlasException {
+        Map<String, Map<String, Object>> mapping = cacheManager.getMapping(indexName);
         if (mapping == null) {
             mapping = getMappingFromDao(indexName);
             cacheManager.putMapping(indexName, mapping);
@@ -94,8 +95,8 @@ public abstract class CollectionReferenceService {
         return mapping;
     }
 
-    public CollectionReference putCollectionReference(CollectionReference collectionReference) throws ArlasException {
-        return putCollectionReference(collectionReference, true);
+    public void putCollectionReference(CollectionReference collectionReference) throws ArlasException {
+        putCollectionReference(collectionReference, true);
     }
 
     public CollectionReference putCollectionReference(CollectionReference collectionReference, boolean checkFields) throws ArlasException {
@@ -108,7 +109,7 @@ public abstract class CollectionReferenceService {
     }
 
     public List<CollectionReferenceDescription> describeAllCollections(List<CollectionReference> collectionReferenceList,
-                                                                       Optional<String> columnFilter) throws ArlasException {
+                                                                       Optional<String> columnFilter) throws CollectionUnavailableException {
 
         // Can't use lambdas because of the need to throw the exception of describeCollection()
         List<CollectionReferenceDescription> res  = new ArrayList<>();
@@ -120,6 +121,7 @@ public abstract class CollectionReferenceService {
                     CollectionReferenceDescription describe = describeCollection(collection, columnFilter);
                     res.add(describe);
                 } catch (ArlasException e) { }
+
             }
         }
         return res;
@@ -140,14 +142,14 @@ public abstract class CollectionReferenceService {
         collectionReferenceDescription.params = collectionReference.params;
         collectionReferenceDescription.collectionName = collectionReference.collectionName;
 
-        Map<String, LinkedHashMap> mappings = getMapping(collectionReferenceDescription.params.indexName);
+        Map<String, Map<String, Object>> mappings = getMapping(collectionReferenceDescription.params.indexName);
         Iterator<String> indices = mappings.keySet().iterator();
         Map<String, CollectionReferenceDescriptionProperty> properties = new HashMap<>();
         Optional<Set<String>> columnFilterPredicates = ColumnFilterUtil.getColumnFilterPredicates(columnFilter, collectionReference);
 
         while (indices.hasNext()) {
             String index = indices.next();
-            LinkedHashMap fields = mappings.get(index);
+            Map fields = mappings.get(index);
             properties = union(properties, getFromSource(collectionReference, fields, new Stack<>(), excludeFields, columnFilterPredicates, true));
         }
 
@@ -173,7 +175,7 @@ public abstract class CollectionReferenceService {
         return ret;
     }
 
-    private Map<String, CollectionReferenceDescriptionProperty> getFromSource(CollectionReference collectionReference,
+    protected Map<String, CollectionReferenceDescriptionProperty> getFromSource(CollectionReference collectionReference,
                                                                               Map source, Stack<String> namespace,
                                                                               ArrayList<Pattern> excludeFields,
                                                                               Optional<Set<String>> columnFilterPredicates,
@@ -186,8 +188,7 @@ public abstract class CollectionReferenceService {
             String path = String.join(".", namespace);
             boolean excludePath = excludeFields.stream().anyMatch(pattern -> pattern.matcher(path).matches());
             if (!excludePath) {
-                if (source.get(key) instanceof Map) {
-                    Map property = (Map) source.get(key);
+                if (source.get(key) instanceof Map property) {
                     CollectionReferenceDescriptionProperty collectionProperty = new CollectionReferenceDescriptionProperty();
                     if (property.containsKey("type")) {
                         collectionProperty.type = FieldType.getType(property.get("type"));
@@ -227,7 +228,7 @@ public abstract class CollectionReferenceService {
                             collectionProperty.properties = getFromSource(collectionReference, (Map) property.get("properties"), namespace, excludeFields, columnFilterPredicates, collectionProperty.indexed);
                         }
                         if (collectionReference.params.taggableFields != null) {
-                            collectionProperty.taggable = Arrays.asList(collectionReference.params.taggableFields.split(",")).stream().map(s -> s.trim()).collect(Collectors.toList()).contains(path);
+                            collectionProperty.taggable = Arrays.stream(collectionReference.params.taggableFields.split(",")).map(String::trim).toList().contains(path);
                         }
                         ret.put(key.toString(), collectionProperty);
                     }
@@ -265,7 +266,7 @@ public abstract class CollectionReferenceService {
 
     public List<CollectionReferenceDescription> getAllIndicesAsCollections() throws ArlasException {
         List<CollectionReferenceDescription> collections = new ArrayList<>();
-        Map<String, LinkedHashMap> indices = getAllMappingsFromDao(this.arlasIndex);
+        Map<String, Map<String, Object>> indices = getAllMappingsFromDao(this.arlasIndex);
 
         for (String indexName : indices.keySet()) {
             CollectionReference collection = new CollectionReference();
@@ -277,7 +278,7 @@ public abstract class CollectionReferenceService {
         return collections;
     }
 
-    @SuppressWarnings({"unchecked", "rawtypes"})
+    @SuppressWarnings({"unchecked"})
     protected void checkCollectionReferenceParameters(CollectionReference collectionReference, boolean checkFields) throws ArlasException {
         //get fields
         List<String> fields = new ArrayList<>();
@@ -288,8 +289,6 @@ public abstract class CollectionReferenceService {
                 fields.add(collectionReference.params.geometryPath);
             if (collectionReference.params.centroidPath != null)
                 fields.add(collectionReference.params.centroidPath);
-            if (collectionReference.params.h3Path != null)
-                fields.add(collectionReference.params.h3Path);
             if (collectionReference.params.timestampPath != null)
                 fields.add(collectionReference.params.timestampPath);
             if (!StringUtil.isNullOrEmpty(collectionReference.params.excludeFields)) {
@@ -297,7 +296,7 @@ public abstract class CollectionReferenceService {
                 CheckParams.checkExcludeField(excludeField, fields);
             }
         }
-        Map<String, LinkedHashMap> mappings = CollectionUtil.checkAliasMappingFields(getMapping(collectionReference.params.indexName), fields.toArray(new String[0]));
+        Map<String, Map<String, Object>> mappings = CollectionUtil.checkAliasMappingFields(getMapping(collectionReference.params.indexName), fields.toArray(new String[0]));
         for (String index : mappings.keySet()) {
             Map<String, Object> timestampMD = CollectionUtil.getFieldFromProperties(collectionReference.params.timestampPath, mappings.get(index));
             collectionReference.params.customParams = new HashMap<>();
@@ -323,12 +322,8 @@ public abstract class CollectionReferenceService {
                     return getUnknownType(field, collectionReference.collectionName, throwException);
                 }
             }
-            if (esField != null) {
-                fieldType = esField.type;
-                cacheManager.putFieldType(collectionReference.collectionName, field, fieldType);
-            } else {
-                return getUnknownType(field, collectionReference.collectionName, throwException);
-            }
+            fieldType = esField.type;
+            cacheManager.putFieldType(collectionReference.collectionName, field, fieldType);
         }
         return fieldType;
     }
@@ -352,11 +347,9 @@ public abstract class CollectionReferenceService {
     private FieldType getFieldType(String field, String index) throws ArlasException  {
         AtomicReference<FieldType> ret = new AtomicReference<>(FieldType.UNKNOWN);
         Optional.ofNullable(getMapping(index).get(index))
-                .ifPresent(e -> Optional.ofNullable(e.get(field))
-                        .ifPresent(f -> Optional.ofNullable(((Map)f).get("type"))
-                                .ifPresent(t -> ret.set(FieldType.getType(t)))
-                        )
-                );
+                .flatMap(e -> Optional.ofNullable(e.get(field)))
+                .flatMap(f -> Optional.ofNullable(((Map) f).get("type")))
+                .ifPresent(t -> ret.set(FieldType.getType(t)));
         return ret.get();
     }
 
